Alternative approach to preventing empty paragraphs from collapsing
Using the ::after pseudo-element with text content provides a more
consistent box height with non-empty paragraphs. This prevents table
cell heights from shifting when the caret iterates through them.

--- a/webodf/webodf.css
+++ b/webodf/webodf.css
@@ -51,8 +51,14 @@ text|p, text|h {
   margin: 0;
   line-height: normal;
   position: relative;
-  min-height: 1.3em; /* prevent empty paragraphs and headings from collapsing if they are empty */
 }
+
+text|p::after, text|h::after {
+    /* prevent empty paragraphs and headings from collapsing */
+    content: '\200B'; /* ZERO WIDTH SPACE */
+    white-space: pre;
+}
+
 *[webodfhelper|containsparagraphanchor] {
   position: relative;
 }
